fix(events): overflow of label box

--- a/src/app/events/components/waveform-2/waveform-2.component.scss
+++ b/src/app/events/components/waveform-2/waveform-2.component.scss
@@ -109,6 +109,7 @@ mat-progress-bar {
       position: absolute;
       top: 2px;
       left: 200px;
+      right: 90px;
       opacity: 0.45;
 
       &:hover {
