--- a/src/app/events/components/waveform-labelling-mode/waveform-labelling-mode.component.scss
+++ b/src/app/events/components/waveform-labelling-mode/waveform-labelling-mode.component.scss
@@ -121,7 +121,7 @@
     position: absolute;
     top: 2px;
     left: 200px;
-    right: 0;
+    right: 90px;
     display: block;
 
     .mat-chip {
